@@ -16,6 +16,8 @@ S3method(getPar0,momentuHMM)
 S3method(getPar0,momentuHierHMM)
 S3method(getParDM,default)
 S3method(getParDM,hierarchical)
+S3method(getTrProbs,default)
+S3method(getTrProbs,hierarchical)
 S3method(plot,crwData)
 S3method(plot,crwHierData)
 S3method(plot,miHMM)
@@ -61,6 +63,7 @@ export(fitHMM)
 export(getPar)
 export(getPar0)
 export(getParDM)
+export(getTrProbs)
 export(mixtureProbs)
 export(plotPR)
 export(plotSat)
